test/Fail/Issue7989.err
Issue7989.agda:10.5-6: warning: -W[no]FixingRelevance
Replacing illegal relevance 'irrelevant' contradicting declared
relevance by 'relevant'
when checking the definition of D

Issue7989.agda:10.10-11: error: [VariableIsIrrelevant]
Variable I is declared irrelevant, so it cannot be used here
when checking that the expression I has type Set
